<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_background"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintBottom_toBottomOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/email_container"
            app:layout_constraintEnd_toEndOf="@id/shows_title"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_message"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/email_container"
            app:layout_constraintTop_toBottomOf="@id/login_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/button_style"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@id/register_button"
            app:layout_constraintEnd_toEndOf="@id/email_container"
            app:layout_constraintStart_toStartOf="@id/login_text"
            app:layout_constraintTop_toBottomOf="@id/password_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/button_style"
            android:textColor="@color/white"
            android:backgroundTint="@color/rating_bar_purple"
            android:text="@string/register"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/email_container"
            app:layout_constraintStart_toStartOf="@id/login_text"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            style="@style/login_text_input_layout_style"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:paddingVertical="0dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            style="@style/login_text_input_layout_style"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/input_field_stroke_selector"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:layout_constraintStart_toStartOf="@+id/login_text"
            app:layout_constraintTop_toBottomOf="@+id/email_container"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingVertical="0dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/top_right_illustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shows_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_top_right_illustration" />

        <ImageView
            android:id="@+id/top_left_illustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shows_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_top_left_illustration" />

        <ImageView
            android:id="@+id/triangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:contentDescription="@string/shows_title"
            app:layout_constraintBottom_toBottomOf="@id/login_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/welcome_triangle_ic" />

        <TextView
            android:id="@+id/shows_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/shows_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/login_text"
            app:layout_constraintStart_toStartOf="@id/triangle"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/remember_me_checkbox"
            android:buttonTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/password_container"
            app:layout_constraintStart_toStartOf="@id/password_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>