<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            style="@style/collapsing_toolbar_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/collapsing_toolbar_style"
            app:contentScrim="@color/white"
            app:expandedTitleTextAppearance="@style/collapsing_toolbar_style"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:title="Krv nije voda">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/arrow_back"
                    app:layout_collapseMode="pin" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:layout_marginHorizontal="24dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/show_details_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/krv_nije_voda_1" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/show_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="29dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/krv_nije_voda_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/reviews"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Reviews" />


                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/clear_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/white"
                    android:checked="false"
                    android:focusable="true"
                    android:src="@drawable/clear_icon"
                    android:text="@string/switch_label_reviews"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_collapseMode="pin" />

            </LinearLayout>


            <TextView
                android:id="@+id/show_details_review_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"
                tools:text="3 REVIEWS, 3.63 AVERAGE" />


            <RatingBar
                android:id="@+id/show_details_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:theme="@style/rating_bar_style"
                tools:rating="3.5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="100dp"
                tools:listitem="@layout/item_review" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_write_review"
            style="@style/button_style_write_review"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/review_button" />
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>